--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/gmlod/x513f" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/gmlod/x11s" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/gmlod/j12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/gmlod/t8d" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/gmlod/e4d" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/gmlod/p12f" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/gmlod/b3k" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/gmlod/w10o" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/gmlod/o9q" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/gmlod/q7h" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/gmlod/q5s" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/dxxznp/e513e" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/dxxznp/s11q" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/dxxznp/l12u" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/dxxznp/y8n" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/dxxznp/t4i" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/dxxznp/o12r" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/dxxznp/l3p" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/dxxznp/a10g" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/dxxznp/r9y" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/dxxznp/r7n" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/dxxznp/d5e" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215389.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989269-320x200.jpg"><p align="center">【最新疫情6·27】新病例急增 美多州暂缓重启</p></a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215389.md#1" title="【最新疫情6·27】新病例急增 美多州暂缓重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989269-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212986.md#1" title="【内幕】莱特希泽与王岐山言论针锋相对""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1058995292-600x400-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214278.md#1" title="【重播】白宫特别工作组简报会：疫情反弹""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-82-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212915.md#1" title="【十字路口】中共外宣5手法 特务血泪醒世录""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/download-80-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://pxdgi295.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215389.md#1">【最新疫情6·27】新病例急增 美多州暂缓重启</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215438.md#1">【拍案惊奇】留港不留人？美制裁中共第一枪</a><br>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价下跌54%</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215540.md#1">NBA复赛在即  302名球员检测16人确诊</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215389.md#1">【最新疫情6·27】新病例急增 美多州暂缓重启</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215438.md#1">【拍案惊奇】留港不留人？美制裁中共第一枪</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价下跌54%</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215540.md#1">NBA复赛在即  302名球员检测16人确诊</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212175.md#1">中印边境冲突 军二代称中方2死3伤</a><br>
@@ -27,9 +27,9 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212800.md#1">杨威：习近平是否希望川普连任</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211486.md#1">贵州一村庄被淹没 洪水深达10余米</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212439.md#1">蓬佩奥：中共安全部队人员在华为大楼工作</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211793.md#1">中印冲突恐升级？卫星图像显示中共新动作</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212440.md#1">【现场视频】中共驻意使馆新通知 华人回国更难</a><br>
 <br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212964.md#1">【内幕】王岐山汪洋与美方交手 铩羽而归</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12212753.md#1">FBI：中共驻美大使秘密招募科学家</a><br>
@@ -42,22 +42,22 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 358,723,845 人
+!共 358,725,807 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/4/15/n12033990.md#1">【思想领袖】巴斯：击垮中共 美可一招制胜</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214603.md#1">海外华人：回不了家 击穿我们心理底线</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212964.md#1">【内幕】王岐山汪洋与美方交手 铩羽而归</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214505.md#1">反制香港国安法 美宣布限制中共官员签证</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215121.md#1">【新闻看点】美国连9动作 领军国际抗共潮</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214964.md#1">全球退党中心一项倡议 帮人远离瘟疫</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214937.md#1">杨洁篪跟蓬佩奥说了什么 导致双方不欢而散</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212915.md#1">【十字路口】中共外宣5手法 特务血泪醒世录</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214505.md#1">反制香港国安法 美宣布限制中共官员签证</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214603.md#1">海外华人：回不了家 击穿我们心理底线</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214557.md#1">李锐黄万里儿女回顾父辈反对三峡大坝经历</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12212986.md#1">【内幕】莱特希泽与王岐山言论针锋相对</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215313.md#1">【一线采访】疫情冲击重挫北京经济</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214964.md#1">全球退党中心一项倡议 帮人远离瘟疫</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215250.md#1">【翻墙必看】中共政治局常委与美方交手失败</a><br>
-<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
+<a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215313.md#1">【一线采访】疫情冲击重挫北京经济</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215438.md#1">【拍案惊奇】留港不留人？美制裁中共第一枪</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214868.md#1">任贤齐端午节庆生 睽违七年宣布“秘密计划”</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214370.md#1">【重播】伊万卡主持劳动力咨询会议 川普致辞</a><br>
@@ -107,7 +107,7 @@
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12207455.md#1">无惧港版国安法 林日曦宣布下月重启演出</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12207100.md#1">【一线采访】綦江上游泛滥 洪水直逼三楼</a><br>
 <br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/pxdgi295/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/IMG_3742-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214313.md#1">张宝成妻：中共快点倒 我丈夫才能早点出来</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213802.md#1">南京退休一级警督 法轮功学员程兰的遭遇</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211963.md#1">迫害法轮功 辽宁省政法委书记于天敏被举报</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211187.md#1">美国务院报告：中共仍借反恐实行压迫政策</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1077008232-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价下跌54%</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214879.md#1">普拉多3.5L大陆停产 丰田高端车型全离华</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214643.md#1">英批准华为芯片研究机构申请 美发警告回应</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214599.md#1">指一带一路中存在渎职和造假 巴国想重新谈判</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213944.md#1">北京租房市场成交量下滑三成 租金罕见下调</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/2006270057522378-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215108.md#1">美议员提法案 支持联邦职员赴台湾学习</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214937.md#1">杨洁篪跟蓬佩奥说了什么 导致双方不欢而散</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213970.md#1">中共加大对台军事威胁 台湾强化反制能力</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214491.md#1">中印边境大量屯兵 印度：我们效仿北京</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213107.md#1">中共军机6月第9度扰台 遭台湾空军驱离</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214832.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989788-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214832.md#1">美16州中共病毒病例攀升 34州持稳</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214856.md#1">【现场视频】四代耕种60年 政府称非法种地</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214393.md#1">中共病毒攻人体多个器官 一些患者无法全恢复</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214073.md#1">【现场视频】“老天怒了” 内蒙现巨型龙卷风</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214000.md#1">湖南道路塌方致千余人滞留 四川多景区关闭</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213637.md#1">北京疫情扩至昌平区</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215316.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215316.md#1">每日三退声明精选（2020/06/26）</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214829.md#1">聚焦高考顶替案 上海交大招生黑幕被重提</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214051.md#1">四川一个月前发生枪击命案 嫌犯仍在逃</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213079.md#1">每日三退声明精选（2020/06/25）</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211860.md#1">组图：北京核酸检测不许拍照 市民诧异</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211524.md#1">槽罐车偷排泥浆 无锡男子试图拦截被撞身亡</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12205642.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12205642.md#1">搜集14万条学生个资 江阴培训机构被罚30万</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12205203.md#1">周星驰58岁生日 林允零点准时送祝福</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12205054.md#1">回应神似迪丽热巴 张雨绮：怎么样也是她像我</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12203873.md#1">重庆潼南米心镇8名小学生溺亡 多为女孩</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12202984.md#1">疫情下 清华6599名研究生参加云毕业典礼</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/21/n12202190.md#1">刘诗诗哭了怎么办？吴奇隆别样回答超宠妻</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/IMG_3742-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215292.md#1">刘贤斌第三次出狱 妻子谈25年来聚散人生</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214315.md#1">控告办案人违法 法轮功学员朱素荣家人遭报复</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214313.md#1">张宝成妻：中共快点倒 我丈夫才能早点出来</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213802.md#1">南京退休一级警督 法轮功学员程兰的遭遇</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211963.md#1">迫害法轮功 辽宁省政法委书记于天敏被举报</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211187.md#1">美国务院报告：中共仍借反恐实行压迫政策</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/GettyImages-1077008232-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215305.md#1">瑞幸咖啡宣布停牌准备退市 股价下跌54%</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215347.md#1">继达美复航后 美联航7月恢复美中航班</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214879.md#1">普拉多3.5L大陆停产 丰田高端车型全离华</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214643.md#1">英批准华为芯片研究机构申请 美发警告回应</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214599.md#1">指一带一路中存在渎职和造假 巴国想重新谈判</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213944.md#1">北京租房市场成交量下滑三成 租金罕见下调</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/2006270057522378-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215543.md#1">重新对外开放 中华民国总统府欢迎参观</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12215108.md#1">美议员提法案 支持联邦职员赴台湾学习</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213970.md#1">中共加大对台军事威胁 台湾强化反制能力</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214491.md#1">中印边境大量屯兵 印度：我们效仿北京</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213107.md#1">中共军机6月第9度扰台 遭台湾空军驱离</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213460.md#1">中共前海军司令吴胜利缷任3年后被审计</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214832.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1222989788-320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214832.md#1">美16州中共病毒病例攀升 34州持稳</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214856.md#1">【现场视频】四代耕种60年 政府称非法种地</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214393.md#1">中共病毒攻人体多个器官 一些患者无法全恢复</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214073.md#1">【现场视频】“老天怒了” 内蒙现巨型龙卷风</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214000.md#1">湖南道路塌方致千余人滞留 四川多景区关闭</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213637.md#1">北京疫情扩至昌平区</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215316.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/27/n12215316.md#1">每日三退声明精选（2020/06/26）</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214829.md#1">聚焦高考顶替案 上海交大招生黑幕被重提</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12214051.md#1">四川一个月前发生枪击命案 嫌犯仍在逃</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/26/n12213079.md#1">每日三退声明精选（2020/06/25）</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211860.md#1">组图：北京核酸检测不许拍照 市民诧异</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/25/n12211524.md#1">槽罐车偷排泥浆 无锡男子试图拦截被撞身亡</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12205642.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/23/n12205642.md#1">搜集14万条学生个资 江阴培训机构被罚30万</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12205203.md#1">周星驰58岁生日 林允零点准时送祝福</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12205054.md#1">回应神似迪丽热巴 张雨绮：怎么样也是她像我</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12203873.md#1">重庆潼南米心镇8名小学生溺亡 多为女孩</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12202984.md#1">疫情下 清华6599名研究生参加云毕业典礼</a><br><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/21/n12202190.md#1">刘诗诗哭了怎么办？吴奇隆别样回答超宠妻</a><br><br><p align="center"><a href="https://github.com/pxdgi295/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/22/n12203800.md#1">【独家】北京疫情下 中共不愿公开的内容</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/17/n12192234.md#1">【独家】中共政府如何监控你的微博帖子</a><br>
 <a href="https://github.com/pxdgi295/djy/blob/master/gb/20/6/18/n12195087.md#1">【内幕】北京疫情再起 雄安新区心惊</a><br>
